@@ -6,9 +6,7 @@ AC_PROG_INSTALL
 AC_CHECK_LIB(socket,main)
 AC_CHECK_LIB(nsl,main)
 AC_HAVE_HEADERS(unistd.h)
-KRB5_UTPID
-KRB5_UTTYPE
-KRB5_UTHOST
+CHECK_UTMP
 AC_FUNC_CHECK(getutent,AC_DEFINE(HAVE_GETUTENT))
 ET_RULES
 KRB_INCLUDE
