@@ -1,3 +1,9 @@
+Tue Dec 27 06:09:03 1994  Richard Basch  (probe@tardis)
+
+	* configure.in:
+	combined KRB5_UTPID, KRB5_UTTYPE, and KRB5_UTHOST
+	into CHECK_UTMP macro (and added additional checks)
+
 Fri Nov 18 01:08:39 1994  Mark Eichin  <eichin@cygnus.com>
 
 	* configure.in: use new macros KRB5_UTPID, KRB5_UTTYPE, and
